--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -157,7 +157,7 @@
               <div class="fs-abbo-bottom">
                 <div class="fs-abbo-sx1">
                   <p>
-                    <label><%= f.check_box :se_condition, :label => l(:field_language) + " <span class='required'>*</span>" %> <%= l(:field_se_condition_readed) %></label>
+                    <label><%= f.check_box :se_condition, :label => l(:field_se_condition) + " <span class='required'>*</span>" %> <%= l(:field_se_condition_readed) %></label>
                   </p>
 
                   <p>Leggo le <a href='#' id='acondizioni' class='pri'><b>condizioni di utilizzo</b></a></p>
