--- a/app/views/account/unsubscribe.erb
+++ b/app/views/account/unsubscribe.erb
@@ -5,11 +5,11 @@
         <div class="fs-content-layout-row">
           <div class="fs-layout-cell layout-item-0" style="width: 99%">
 
-          <% form_tag(newsletter_del_path(:id => @user.id.to_s)) do %>
+          <% form_tag(unsubscribe_path(:id => @user.id.to_s)) do %>
             <article class="fs-post fs-article" style="display: table-cell">
-              <h3> Per togliere la tua iscrizione dalla newsletter di <%= Setting.app_title %> clicca sul pulsante "<%= l(:button_cancel) %>"</h3>
+              <h3>Con il pulsante "<%= l(:button_remove) %> verrà cancellata l'iscrizione alla newsletter quindicinale di <%= Setting.app_title %>, se desidera riattivarla puo' farlo accedendo al suo profilo personale sul sito. %></h3>
               <div style="float:right; margin: 25px;" >
-                <input type="submit" name="cancel" class="fs-rosso-button" value="<%= l(:button_cancel) %> &#187;" tabindex="5"/>
+                <input type="submit" name="cancel" class="fs-rosso-button" value="<%= l(:button_remove) %>" tabindex="5"/>
               </div>
             </article>
           <% end %>
