--- a/app/views/account/login.html.erb
+++ b/app/views/account/login.html.erb
@@ -1,71 +1,28 @@
-<div class="fs-content-layout">
-  <div class="fs-content-layout-row">
-    <div class="fs-layout-cell layout-item-0" style="width: 100%">
-      <h2 style="text-align:center"> Identificazione Abbonati</h2>
-      <div class="fs-layout-cell layout-item-1" style="width: 50%">
+<div class="fs-layout-cell fs-content clearfix" style="width: 100%; position:relative;">
 
-        <h3> Possiedi già un abbonamento ?</h3>
-        <h4> Inserisci i tui dati di login </h4>
-
-        <%= call_hook :view_account_login_top %>
-        <div id="login-form">
-        <% form_tag({:controller => "account", :action => "login"}) do %>
-          <%= back_url_hidden_field_tag %>
-
-          <table width="100%">
-            <tr>
-              <td align="right" style="width: 50%"><label for="username"><%= l(:field_login) %>:</label></td>
-              <td align="left" style="width: 50%"><%= text_field_tag 'username', nil, :tabindex => '1' %></td>
-            </tr>
-            <tr>
-              <td align="right"><label for="password"><%= l(:field_password) %>:</label></td>
-              <td align="left"><%= password_field_tag 'password', nil, :tabindex => '2' %></td>
-            </tr>
-            <% if Setting.openid? %>
-              <tr>
-                <td align="right"><label for="openid_url"><%= l(:field_identity_url) %></label></td>
-                <td align="left"><%= text_field_tag "openid_url", nil, :tabindex => '3' %></td>
-              </tr>
-            <% end %>
-            <tr>
-              <td></td>
-              <td align="left">
-                <% if Setting.autologin? %>
-                    <label for="autologin"><%= check_box_tag 'autologin', 1, false, :tabindex => 4 %> <%= l(:label_stay_logged_in) %></label>
-                <% end %>
-              </td>
-            </tr>
-            <tr>
-              <td align="left">
-              </td>
-              <td align="right">
-                <input type="submit" name="login" value="<%= l(:button_login) %> &#187;" tabindex="5"/>
-              </td>
-            </tr>
-            <% if Setting.lost_password? %>
-            <tr>
-              <td align="left">
-                <%= link_to l(:label_password_lost), :controller => 'account', :action => 'password_recovery' %>
-              </td>
-              <td align="right">
-                <%= link_to l(:label_username_lost), :controller => 'account', :action => 'lost_password' %>
-              </td>
-            </tr>
-            <% end %>
-          </table>
-        <% end %>
+  <div class="fs-postcontent fs-postcontent-0 clearfix">
+    <div class="fs-content-layout">
+      <div class="fs-content-layout-row">
+        <div class="fs-layout-cell layout-item-0" style="width: 98%">
+          <div style="padding: 1em 2em;">
+            <h2 style="text-align:center; color: #b22222"> Accesso a pagine riservate agli abbonati</h2>
+            <h3> Possiedi già un abbonamento ?</h3>
+            <blockquote> Inserisci i tui dati di login qui sopra per accedere a tutti i contenuti del sito</blockquote>
+            <h3> Non sei abbonato?</h3>
+            <blockquote> Ecco tutte le informazioni per abbonarti</blockquote>
+          </div>
+          <article class="fs-post fs-article">
+            <div class="fs-layout-cell layout-item-1" style="width: 100%">
+              <%= Setting.static_page_abbonamenti %>
+            </div>
+            <br/>
+          </article>
         </div>
-        <%= call_hook :view_account_login_bottom %>
       </div>
-
-      <div class="fs-layout-cell layout-item-1" style="width: 50%">
-        <h3> Non sei abbonato?</h3>
-        <h4> Ecco tutte le informazioni per abbonarti </h4>
-        <blockquote style="margin: 10px 0"><%= Setting.static_page_abbonamenti %>
-        </blockquote>
-      </div>
-
     </div>
+    <br/>
   </div>
+  <div class="clearfix"></div>
 </div>
+<%= render :partial => 'editorial/blocco_sidebar1' %>
 <%= javascript_tag "$('#username').focus();" %>
