--- a/app/views/editorial/_edizione_smtp.html.erb
+++ b/app/views/editorial/_edizione_smtp.html.erb
@@ -33,10 +33,9 @@ table td {padding: 0; margin: 0; border: none;}
   </tr>
 <tr>
   <td valign="bottom" height="20" align="center">
-    <font style="font-family: Tahoma, Arial, Helvetica, sans-serif; font-size:8px; color:#bebebe;">
-      <small>Se non vuoi più ricevere la newsletter clicca qui
-        <%= link_to("clicca qui", newsletter_del_path( :id => (@user.nil? ?  '@@user_codice@@' : @user.id.to_s)), :class => "newwin", :style => 'color:#fff;', :target => '_blank') %>
-      </small>
+    <font style="font-family: Tahoma, Arial, Helvetica, sans-serif; font-size:8px; color:#ffffff;">
+      Se non vuoi più ricevere la newsletter clicca qui
+        <%= link_to("clicca qui", defurl + unsubscribe_path( :id => (@user.nil? ?  '@@user_codice@@' : @user.id.to_s)), :class => "newwin", :style => 'color:#fff;', :target => '_blank', :alt =>'unsubscribe') %>
     </font>
   </td>
 </tr>
