--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -12,7 +12,7 @@
   <p>
     <ul style="font-size: 0.8em; color: #aeaeae; margin: 5px 0 5px  11%;">
       <li>
-        il rapporto tra larghezza e altezza dell'immagine sarà 3/2
+        Il rapporto tra larghezza e altezza dell'immagine sarà 3/2
       </li>
       <li>
         l'immagine verrà ritagliata a 300px per 200px
