--- a/app/views/top_sections/_form.html.erb
+++ b/app/views/top_sections/_form.html.erb
@@ -17,19 +17,14 @@
     <ul style="font-size: 0.8em; color: #aeaeae; margin: 5px 0 5px  11%;">
       <li>
         Immagini stili e misure:
-
+      <li>
+        L' immagine deve avere le seguenti proporzioni di larghezza x altezza = 3 x 2
       </li>
       <li>
-        blocco grande a sinistra: :block_l => "256x216#"
+        E' consigliabile utilizzare le misure: "200x134" o "300x200"  se di altre dimensioni verranno  comunque ritagliate
       </li>
       <li>
-        blocco piccolo come dentro un articolo: :block_s => "194x154#"
-      </li>
-      <li>
-        blocco tra i menu a destra :tramenu => "290x94#"
-      </li>
-      <li>
-        l'immagine verrà non deve superare i 200kb e di formato jpg/png/gif/bmp
+        l'immagine non deve superare i 200kb e di formato jpg/png/gif/bmp
       </li>
     </ul>
   </p>
