--- a/app/views/newsletters/invii.html.erb
+++ b/app/views/newsletters/invii.html.erb
@@ -28,15 +28,20 @@
         </tr>
         </thead>
         <tbody>
-        <% for abbo in FeeConst::ROLES -%>
-            <% @abbo_users = User.all(:conditions => ["convention_id is null AND role_id=?", abbo]).count %>
+        <% allRolesEmailed = User.count(:group => :role_id, :include => ["newsletter_users"], :conditions => ["newsletter_users.convention_id is null AND users.role_id IN (?) AND newsletter_users.newsletter_id", { FeeConst::ROLES, @newsletter.id} ], :order => "role_id ASC") %>
+        <% allRoles = User.count(:group => :role_id, :conditions => ["convention_id is null AND role_id IN (?)", FeeConst::ROLES ], :order => "role_id ASC") %>
+        <%# allRoles.each do |key, value| %>
+        <% allRoles.each do |abbo, abbo_users| %>
+        <%# for abbo in FeeConst::ROLES -%>
+            <%# abbo_users = conv.users_count.to_i %>
+            <%# abbo_users = User.all(:conditions => ["convention_id is null AND role_id=?", abbo]).count %>
             <tr class='user'>
               <td class="ico" align="left">
                 <%= user_role_iconized(nil, :size => 'l', :icon_for => get_role_css(abbo), :text => get_abbonamento_name(abbo)) %>
               </td>
-              <td class="cnt" align="left"><%= @abbo_users %></td>
+              <td class="cnt" align="left"><%= abbo_users %></td>
               <td class="checkbox">
-                <% if @abbo_users > 0 %>
+                <% if abbo_users > 0 %>
                     <% if FeeConst::AUTHORED_ROLES.include? abbo %>
                         <%= check_box_tag 'abbo_ids[]', abbo, true %>
                     <% else %>
@@ -45,6 +50,11 @@
                 <% end %>
                 </td>
                 <td>
+                  <% allRoles.each do |abbo_nl, users_nl_count|
+                    if abbo_nl == abbo %>
+                      <%= users_nl_count %>
+                    <% end
+                    end %>
                   <%# attenzione abbo != abbo.id = posizione in arrays user.scoped_by_newsletter_users(@).nil? %>
                 </td>
                 </tr>
@@ -69,10 +79,15 @@
         </tr>
         </thead>
         <tbody>
-        <% for conv in Convention.all -%>
-            <% @conv_users = conv.users.count %>
+        <%# allConvention = Convention.find(:all, :select => ["*, (select count(u.id)  from users as u where u.convention_id = conventions.id) AS users_count, (select count(u_nl.id) from newsletter_users as u_nl where u_nl.convention_id = conventions.id AND u_nl.newsletter_id=?) AS users_nl_count", @newsletter.id], :order => "ragione_sociale ASC") %>
+        <% allConvention = Convention.find(:all, :select => ["*, (select count(u.id)  from users as u where u.convention_id = conventions.id) AS users_count, (select count(u_nl.id) from newsletter_users as u_nl where u_nl.convention_id = conventions.id AND u_nl.newsletter_id=" + @newsletter.id.to_s + ") AS users_nl_count" ], :order => "ragione_sociale ASC") %>
+        <%# for conv in Convention.all -%>
+        <% for conv in allConvention %>
+            <%# @conv_users = conv.users.count %>
+            <% @conv_users = conv.users_count.to_i %>
+
             <tr class='convention <%= cycle("odd", "even") %>'>
-              <td class="convention" align="left"><%= h truncate(conv.name, :length => 300) %></td>
+              <td class="convention" align="left"><%= truncate(conv.name, :length => 300) %></td>
               <td class="datascadenza" align="left">
                 <strong>
                   <% if conv.data_scadenza %>
@@ -101,6 +116,7 @@
                 <% end %>
                 </td>
                 <td>
+                  <%= conv.users_nl_count %>
                   <%# user.scoped_by_newsletter_users(@).nil? %>
                 </td>
                 </tr>
