--- a/app/views/newsletters/massmailer.html.erb
+++ b/app/views/newsletters/massmailer.html.erb
@@ -41,7 +41,7 @@
             //event.preventDefault();
         });
         btn_send.attr("disabled", false);
-        btn_send.click();
+        //btn_send.click(); send initial set
 
     }); //end query document ready
     var url_send = '<%= newsletter_send_emails_path() %>';
