--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -927,6 +927,7 @@ padding-bottom: 3px;
 .icon-copy { background-image: url(../images/copy.png); }
 .icon-duplicate { background-image: url(../images/duplicate.png); }
 .icon-del { background-image: url(../images/delete.png); }
+.delclass{ margin-left: 30px;}
 .icon-move { background-image: url(../images/move.png); }
 .icon-save { background-image: url(../images/save.png); }
 .icon-cancel { background-image: url(../images/cancel.png); }
@@ -1599,5 +1600,3 @@ hr.quesiti hr {
     font-size: 1.5em;
     color: #bc8f8f;
 }
-
-
